tests/paczka1/fuzzy1/31881559.err
Error in line 1: A940 A513 94,7
Error in line 6: A940 A940 31,7
Error in line 2: Dy9 A513 9,3
Error in line 17: Dy9 S934 2,8
Error in line 28: OJVeFinS S934 41,7
Error in line 27: UR6DGjQ A940 14,0
Error in line 24: Dy9 A513 86,1
